--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            background: url('bj.jpeg') no-repeat center center fixed;
+            background: url('bj.jpg') no-repeat center center fixed;
             background-size: cover;
         }
 
