--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
             background-color: floralwhite;
             overflow: hidden;
             border: 2px solid #ccc;
-            margin-top: 13vh; /* 使用视口高度 */
+            margin-top: 25vh; 
             border-radius: 15px;
         }
+
 
         .draggable {
             cursor: move;
@@ -65,7 +66,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 100px;
+            margin-top: 150px;
         }
 
         .button {
